--- a/monedero/.vscode/settings.json
+++ b/monedero/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "c:\\Users\\Jeankarlo\\Desktop\\Codigo Backend 6\\Codigo-backend-virtual-07\\entorno_flask_jwt\\Scripts\\python.exe"
+    "python.pythonPath": "c:\\Users\\Jeankarlo\\Desktop\\Codigo_Backend_Virtual_07\\entorno_flask_jwt\\Scripts\\python.exe"
 }
